src/test/ui/const-generics/issue-67375.full.stderr
warning: cannot use constants which depend on generic parameters in types
  --> $DIR/issue-67375.rs:8:12
   |
LL |     inner: [(); { [|_: &T| {}; 0].len() }],
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(const_evaluatable_unchecked)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #76200 <https://github.com/rust-lang/rust/issues/76200>

error[E0392]: parameter `T` is never used
  --> $DIR/issue-67375.rs:6:12
   |
LL | struct Bug<T> {
   |            ^ unused parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0392`.
